--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
+          distribution: 'temurin'
           java-version: '21'
 
       - name: Build APK (Gradle)
